--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body header h1 span {
 .container{
     width:100%;
     min-width:100%;
+    transition:all 1s;
 }
 ul,li{
     list-style-type:none;
@@ -49,4 +50,46 @@ nav ul li .nav-brand {
 }
 nav ul li .nav-brand:hover {
     color:brown;
+}
+
+
+/*app js*/
+.btn-custom {
+    border:none;
+    outline-style:none;
+    background-color:transparent;
+    margin:0 !important;
+    padding:3px 8px;
+    transition:all 1s;
+    color:whitesmoke;
+}
+button:focus {
+    outline-style:none!important;
+}
+.wrap-sombre {
+    background:#333;
+    transition:all 1s;
+}
+.wrap-clair {
+    background:whitesmoke;
+}
+.color-light {
+    color:whitesmoke !important;
+    transition:all 1s;
+}
+.color-dark {
+    color:#333 !important;
+    transition:all 1s;
+}
+.bg-light {
+    background-color:inherit!important;
+}
+
+tr>td {
+    background-color:inherit!important;
+    color: inherit!important;
+}
+
+.imgButton {
+    background-image: url('../img/eye_close.png');
 }
